Bug 178908 - adding location in "set geographic location" says "could not parse coordinates
Summary: adding location in "set geographic location" says "could not parse coordinates
Status: RESOLVED FIXED
Alias: None
Product: kstars
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kstars
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-27 19:01 UTC by disclosed
Modified: 2008-12-28 21:14 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description disclosed 2008-12-27 19:01:38 UTC
Version:           1.4.1 (using 4.1.3 (KDE 4.1.3), 4.1.3-4.fc9 Fedora)
Compiler:          gcc
OS:                Linux (i686) release 2.6.27.7-53.fc9.i686

how to reproduce:
1. start kstars 1.4.1
2. press Ctrl-G, to set geographic location
3. Enter a new city with coordinates on the given format.
4. press the add new city button.
5. read the error "could not parse coordinates".


tested:
City: Idre
Province: -NONE-
Country: Sweden
Longitude: 12 50 17.6
Latitude: 61 52 55.3
Comment 1 Akarsh Simha 2008-12-28 21:14:06 UTC
SVN commit 902623 by asimha:

The code in the Location Dialog was using QString::toDouble() to
convert the text in the time zone box into an integer. This did not
work with localization settings that use anything other than '.' for a
decimal point.

The patch fixes this by converting the localized version of the
decimal point to '.' and then calling toDouble() on the string. [As
done in dms::setFromString()]

CCMAIL: kstars-devel@kde.org
BUG: 178908



 M  +3 -1      locationdialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=902623