The code in the Location Dialog was using QString::toDouble() to convert the text in the time zone box into an integer. This did not work with localization settings that use anything other than '.' for a decimal point.

The patch fixes this by converting the localized version of the
decimal point to '.' and then calling toDouble() on the string. [As
done in dms::setFromString()]

CCMAIL: kstars-devel@kde.org
BUG: 178908


svn path=/trunk/KDE/kdeedu/kstars/; revision=902623